--- a/src/main/resources/templates/admin/addTablePage.html
+++ b/src/main/resources/templates/admin/addTablePage.html
@@ -5,30 +5,42 @@
     <title>Title</title>
 </head>
 <body>
-<h1>테이블 추가</h1>
 <div>
-    <form method="post" th:action="@{/admin/table}" th:object="${table}">
-        <div>
-            <label for="number">Number:</label>
-            <input id="number" required th:field="*{number}" type="number">
-            <br>
-        </div>
-        <div>
-            <label for="seats">Seats:</label>
-            <input id="seats" required th:field="*{seats}" type="number">
-            <br>
-        </div>
-        <div>
-            <label>Exist:</label>
-            <input id="existTrue" required th:field="*{exist}" th:value="true" type="radio">
+    <div class="">
+        <nav>
+            <div class="navbar">
+                <div class="navbar_logo">
+                    <a th:href="@{/admin}"><img alt="LOGO_img" src="../img/LOGO(1).png" width="100"/></a>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <br/>
 
-            <label for="existTrue">Yes</label>
-            <input id="existFalse" required th:field="*{exist}" th:value="false" type="radio">
-            <label for="existFalse">No</label>
-            <br>
-        </div>
-        <button type="submit">Submit</button>
-    </form>
+    <div>
+        <form method="post" th:action="@{/admin/table}" th:object="${table}">
+            <div>
+                <label for="number">Number:</label>
+                <input id="number" required th:field="*{number}" type="number">
+                <br>
+            </div>
+            <div>
+                <label for="seats">Seats:</label>
+                <input id="seats" required th:field="*{seats}" type="number">
+                <br>
+            </div>
+            <div>
+                <label>Exist:</label>
+                <input id="existTrue" required th:field="*{exist}" th:value="true" type="radio">
+
+                <label for="existTrue">Yes</label>
+                <input id="existFalse" required th:field="*{exist}" th:value="false" type="radio">
+                <label for="existFalse">No</label>
+                <br>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
