--- a/src/main/resources/templates/admin/adminMainPage.html
+++ b/src/main/resources/templates/admin/adminMainPage.html
@@ -19,7 +19,7 @@
 </div>
 
 <div>
-    <a class="" th:href="@{/admin/customer}">고객 관리</a>
+    <a class="" th:href="@{/admin/customerList}">고객 관리</a>
 </div>
 
 </body>
