adminMainPage with bootstrap

--- a/src/main/resources/templates/customer/customerMainPage.html
+++ b/src/main/resources/templates/customer/customerMainPage.html
@@ -9,12 +9,12 @@
 
 
 <h1 th:text="|안녕하세요! ${user.name}님|">환영문구</h1>
-<div>
+<!-- <div>
     <a class="" th:href="@{/login/logout}">로그아웃</a>
 </div>
 <div>
     <a class="" th:href="@{/customer/{id}/date(id=${id})}">사전 예약</a>
-</div>
+</div> -->
 
 <div >
     
