--- a/src/main/resources/templates/user/loginPage.html
+++ b/src/main/resources/templates/user/loginPage.html
@@ -18,9 +18,9 @@
             <br>
             <input id="loginPwd" name="loginPwd" required type="password"/>
             <br/>
-            <input type="checkbox" name="remember-me"> Remember Me
+            <input id="checkbox" type="checkbox" name="remember-me"> Remember Me
             <br />
-            <button type="submit">Submit</button>
+            <button type="submit" >Submit</button>
         </form>
     </div>
 </div>
