--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" th="http://www.thymeleaf.org">
     <link rel="stylesheet" href="/css/mainPage.css">
-    <title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="main_site">
@@ -17,6 +18,7 @@
                     <li><a href="#main_Menu">Menu</a></li>
                     <li><a href="#main_Reservation">Reservation</a></li>
                     <li><a href="#main_Location">Location</a></li>
+                    <li onclick="javascript:btn()"><a  th:href="@{login/login}">MyPage</a></li>
                     <!-- <li><a th:href="@{login/login}">MyPage</a></li> -->
     
                 </ul>
@@ -39,7 +41,28 @@
                     <div class="About_header">
                         <div class="About_text_center">
                             <h2>About</h2>
-                            <p>'SWEB' 은 Software-Engineering B팀...</p>
+                            <hr>
+                        </div>
+                        <div class="team_icon" id="icon">
+                            <img src="img/team_icon.png" width="150px">
+                        </div>
+                        <div class="team_icon_caption">
+                            <h4>Introduce SWEB</h4>
+                            <p>SWEB 이란 Software-Engineering team B 라는 뜻의 퓨전 레스토랑입니다</p>
+                        </div>
+                        <div class="dish_icon" id="icon">
+                            <img src="img/dish_icon.png" width="150px">
+                        </div>
+                        <div class="dish_icon_caption">
+                            <h4>Best Service</h4>
+                            <p>SWEB은 항상 최고의 서비스로 고객을 모십니다</p>
+                        </div>
+                        <div class="food_icon" id="icon">
+                            <img src="img/food_icon.png" width="150px">
+                        </div>
+                        <div class="food_icon_caption">
+                            <h4>Fresh Food</h4>
+                            <p>SWEB은 신선한 식재료로 고객님들의 입안을 즐겁게 합니다</p>
                         </div>
                     </div>
                 </section>
@@ -49,7 +72,7 @@
                     <div class="Menu_header">
                         <div class="Menu_text_center">
                             <h2>Menu</h2>
-                            <p>...................</p>
+                            <hr>
                         </div>
                     </div>
                 </section>
@@ -59,7 +82,8 @@
                     <div class="Reservation_header">
                         <div class="Reservation_text_center">
                             <h2>Reservation</h2>
-                            <p>...................</p>
+                            <hr>
+                            <button type="button" onclick="javascript:btn()"><a class="" th:href="@{login/login}">사전 예약</a></button>
                         </div>
                     </div>
                 </section>
@@ -69,7 +93,9 @@
                     <div class="Location_header">
                         <div class="Location_text_center">
                             <h2>Location</h2>
-                            <p>...................</p>
+                            <hr>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18604.984913064214!2d127.01634880846777!3d37.30026454018563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b5c9c1e337b5b%3A0x437f7735e290ec4d!2z6rK96riw64yA7ZWZ6rWQ!5e0!3m2!1sko!2skr!4v1684722069125!5m2!1sko!2skr" width="600" height="450" style="border:0; margin-top: 50px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
                         </div>
                     </div>
                 </section>
@@ -78,4 +104,9 @@
     </div>
     
 </body>
+<script>
+    function btn(){
+        alert('로그인이 필요한 서비스입니다.');
+    }
+</script>
 </html>
