--- a/src/main/resources/templates/customer/customerMainPage.html
+++ b/src/main/resources/templates/customer/customerMainPage.html
@@ -110,7 +110,13 @@
                 </section>
             </li>
         </ul>
-
     </div>
+    <footer>
+        <P>2023 © SWEB. All Rights Reserved.</P>
+        <div class="footer_icon">
+            <a href="https://github.com/Se-Engineering-2023-kgu/termProject-main" target="_blank"><img src="img/github_icon.png" width="30px"></a>
+        <a href="https://heather-baryonyx-5f6.notion.site/K-Scrum-efe8e127bb6147b1b667e96b0cd90f55" target="_blank"><img src="img/notion_icon.png" width="30px"></a>
+        </div>
+    </footer>
 </body>
 </html>
