--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Reservation</title>
     <link rel="stylesheet" type="text/css" href="/css/reservationDate.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
     <div th:replace="~{fragments/Header :: Header}"> </div>
