--- a/src/main/resources/static/css/reservationTable.css
+++ b/src/main/resources/static/css/reservationTable.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 .wrap{
     width: 100%;
@@ -12,7 +13,7 @@
     background: rgb(93, 86, 78);
 }
 .wrap form{
-    padding: 50px;
+    padding-top: 30px;
     font-size: 15px;
 }
 
@@ -25,6 +26,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+.Select h4{
+    margin-bottom: 15px;
 }
 .SelectTable{
     margin: 10px 10px;
