--- a/src/main/resources/templates/customer/customerMainPage.html
+++ b/src/main/resources/templates/customer/customerMainPage.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8" xmlns:th="http://www.thymeleaf.org">
     <title>Title</title>
     <link rel="stylesheet" href="/css/mainPage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 <body>
-
-
-<h1 th:text="|안녕하세요! ${user.name}님|">환영문구</h1>
-<div>
-    <a class="" th:href="@{/login/logout}">로그아웃</a>
-</div>
-<div>
-    <a class="" th:href="@{/customer/{id}/date(id=${id})}">사전 예약</a>
-</div>
-
-<div >
-    
-
     <div class="main_site">
         <nav>
             <div class="navbar">
@@ -34,7 +23,7 @@
     
                 </ul>
                 <ul class="navbar_member" >
-                    <li><a th:text="|안녕하세요! ${user.name}님|" >환영문구</a></li>
+                    <li class="himember"><a th:text="|안녕하세요! ${user.name}님|" >환영문구</a></li>
                     <li><a class="" th:href="@{/login/logout}" >LOG-OUT</a></li>
                 </ul>
             </div>
@@ -54,21 +43,21 @@
                             <hr>
                         </div>
                         <div class="team_icon" id="icon">
-                            <img src="img/team_icon.png" width="150px">
+                            <img src="/img/team_icon.png" width="150px">
                         </div>
                         <div class="team_icon_caption">
                             <h4>Introduce SWEB</h4>
                             <p>SWEB 이란 Software-Engineering team B 라는 뜻의 퓨전 레스토랑입니다</p>
                         </div>
                         <div class="dish_icon" id="icon">
-                            <img src="img/dish_icon.png" width="150px">
+                            <img src="/img/dish_icon.png" width="150px">
                         </div>
                         <div class="dish_icon_caption">
                             <h4>Best Service</h4>
                             <p>SWEB은 항상 최고의 서비스로 고객을 모십니다</p>
                         </div>
                         <div class="food_icon" id="icon">
-                            <img src="img/food_icon.png" width="150px">
+                            <img src="/img/food_icon.png" width="150px">
                         </div>
                         <div class="food_icon_caption">
                             <h4>Fresh Food</h4>
@@ -82,7 +71,7 @@
                     <div class="Menu_header">
                         <div class="Menu_text_center">
                             <h2>Menu</h2>
-                            <p>...................</p>
+                            <hr>
                         </div>
                     </div>
                 </section>
@@ -114,8 +103,8 @@
     <footer>
         <P>2023 © SWEB. All Rights Reserved.</P>
         <div class="footer_icon">
-            <a href="https://github.com/Se-Engineering-2023-kgu/termProject-main" target="_blank"><img src="img/github_icon.png" width="30px"></a>
-        <a href="https://heather-baryonyx-5f6.notion.site/K-Scrum-efe8e127bb6147b1b667e96b0cd90f55" target="_blank"><img src="img/notion_icon.png" width="30px"></a>
+            <a href="https://github.com/Se-Engineering-2023-kgu/termProject-main" target="_blank"><img src="/img/github_icon.png" width="30px"></a>
+        <a href="https://heather-baryonyx-5f6.notion.site/K-Scrum-efe8e127bb6147b1b667e96b0cd90f55" target="_blank"><img src="/img/notion_icon.png" width="30px"></a>
         </div>
     </footer>
 </body>
