--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/css/reservationTable.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
     <div th:replace="~{fragments/Header :: Header}"></div>
     <div class="wrap">
         <div class="Select">
-            <h3>2. 테이블 선택 </h3>
+            <h3>예약 페이지 2. 테이블 선택 </h3>
             <form method="post" role="form" th:action="@{/customer/{id}/reserInfo(id=${id})}"
                 th:object="${reservation}">
                 <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
@@ -29,7 +30,7 @@
 
 
                 <div class="SelectTable">
-                    <h2>테이블 선택 </h2>
+                    <h4>테이블 선택 </h4>
                     <div th:each="table : ${tableList}">
                         <label>
                             <input th:name="tid" th:value="${table.tid}" type="radio"/>
@@ -41,7 +42,7 @@
                 <br/>
 
                 <div class="SelectMenu">
-                    <h2>메뉴 선택</h2>
+                    <h4>메뉴 선택</h4>
                     <div th:each="menu : ${menuList}">
                         <label>
                             <input th:field="*{orderMenuList}" th:text="${menu.name}" th:value="${menu.mid}"
