--- a/src/main/resources/templates/reservation/reservationInfo.html
+++ b/src/main/resources/templates/reservation/reservationInfo.html
@@ -5,10 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
-<h1>4. 예약 명세서 페이지</h1>
 <div th:replace="~{fragments/Header :: Header}"/>
-<div>
+<div class="wrap">
+    <div class="reserInfo">
+        <h1>4. 예약 명세서 페이지</h1>
     <form method="post" role="form" th:action="@{/customer/{id}/reservationInfo(id=${id})}" th:object="${reservation}">
         <div>
             <label>예약 인원수:</label>
@@ -39,6 +39,7 @@
         <!--        </div>-->
         <button id="submit" type="submit">예약</button>
     </form>
+    </div>
 </div>
 
 </body>
