reservationTable postMapping 경로 수정

--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -11,7 +11,7 @@
     <div class="wrap">
         <div class="Select">
             <h3>2. 테이블 선택 </h3>
-            <form method="post" role="form" th:action="@{/customer/{id}/reserInfo(id=${id})}"
+            <form method="post" role="form" th:action="@{/customer/{id}/table(id=${id})}"
                 th:object="${reservation}">
                 <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
                 <div class="NumberOfPeople">
