--- a/src/main/resources/static/css/customerInfo.css
+++ b/src/main/resources/static/css/customerInfo.css
@@ -12,12 +12,8 @@
     justify-content: center;
     background: rgb(93, 86, 78);
 }
-.wrap form {
-    width: 150px;
-    font-size: 15px;
-}
 
-.reserInfo{
+.mypage{
     width: 30%;
     height: 600px;
     background: white;
@@ -26,22 +22,4 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-.reserInfo h3{
-    margin-bottom: 15px;
-    height: 150px;
-}
-
-
-.submit{
-    float: right;
-    width: 50px;
-    height: 30px;
-    border: 0;
-    outline: none;
-    border-radius: 40px;
-    background: #6a6666;
-    color: white;
-    margin-top: 100px;
-
 }
