--- a/src/main/resources/static/css/reservationMenu.css
+++ b/src/main/resources/static/css/reservationMenu.css
@@ -13,8 +13,9 @@
     background: rgb(93, 86, 78);
 }
 .wrap form{
-    padding-top: 30px;
+    width: 150px;
     font-size: 15px;
+    padding-top: 30px;
 }
 
 .Select{
@@ -32,10 +33,13 @@
     margin: 10px 10px;
 }
 
+.Select h3{
+    margin-bottom: 15px;
+}
+
 .submit{
-    margin-top: 20px;
     float: right;
-    width: 40%;
+    width: 50px;
     height: 30px;
     border: 0;
     outline: none;
