--- a/src/main/resources/static/css/reservationTable.css
+++ b/src/main/resources/static/css/reservationTable.css
@@ -13,8 +13,9 @@
     background: rgb(93, 86, 78);
 }
 .wrap form{
-    padding-top: 30px;
+    width: 150px;
     font-size: 15px;
+    padding-top: 30px;
 }
 
 .Select{
@@ -27,17 +28,13 @@
     align-items: center;
     flex-direction: column;
 }
-.Select h4{
+.Select h3{
     margin-bottom: 15px;
-}
-.SelectTable{
-    margin: 10px 10px;
 }
 
 .submit{
-    margin-top: 20px;
     float: right;
-    width: 40%;
+    width: 50px;
     height: 30px;
     border: 0;
     outline: none;
