--- a/src/main/resources/templates/customer/customerInfo.html
+++ b/src/main/resources/templates/customer/customerInfo.html
@@ -2,19 +2,27 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="/css/customerInfo.css">
+    <title>My Page</title>
 </head>
 <body>
-<h1>customer Info</h1>
-<!-- <div th:replace="~{fragments/Header :: header}"/> -->
-
-    <div th:each="reservation : ${reservationList}">
-        <span th:text="${reservation.dateSlot}"></span>
-        <span th:text="${reservation.timeSlot.detail}"></span>
-        <span th:text="${reservation.user.name}"></span>
-        <span th:text="${reservation.tables.number}"></span>
-        <span th:text="${reservation.members}"></span>
-        <br/>
+    <div th:replace="~{fragments/Header :: Header}"/>
+    <div class="wrap">
+        <div class="mypage">
+            <div class="userInfo">
+                <img src="/img/user_icon.png" width="100px">
+            </div>
+            <div class="reservationInfo">
+                <div th:each="reservation : ${reservationList}">
+                    <span th:text="${reservation.dateSlot}"></span>
+                    <span th:text="${reservation.timeSlot.detail}"></span>
+                    <span th:text="${reservation.user.name}"></span>
+                    <span th:text="${reservation.tables.number}"></span>
+                    <span th:text="${reservation.members}"></span>
+                    <br/>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
