--- a/src/main/resources/templates/fragments/Header.html
+++ b/src/main/resources/templates/fragments/Header.html
@@ -3,7 +3,7 @@
 <head>  
 </head>
 <body>
-    <div class="header" th:fragment="Header">
-        <a href="/"><img src="/img/LOGO(1).png" alt="LOGO_img" width="100"></a>
+    <div class="header" th:fragment="Header" style="background-color: rgb(93, 86, 78);">
+        <a href="/"><img src="/img/LOGO(2).png" alt="LOGO_img" width="100" style="margin:auto; display: block; padding-top: 20px; "></a>
     </div>
 </body>
