--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -10,7 +10,7 @@
     <div th:replace="~{fragments/Header :: Header}"></div>
     <div class="wrap">
         <div class="Select">
-            <h3>2. 테이블 선택 </h3>
+            <h3>예약 페이지 2. 테이블 선택 </h3>
             <form method="post" role="form" th:action="@{/customer/{id}/table(id=${id})}"
                 th:object="${reservation}">
                 <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
@@ -29,7 +29,6 @@
             </div>
 
             <div class="SelectTable">
-                <h2>테이블 선택 </h2>
                 <div th:each="table : ${tableList}">
                     <label>
                         <input class="radio" th:id="'radio' + ${table.tid}" th:name="tid"
