--- a/src/main/resources/templates/customer/reservationEdit.html
+++ b/src/main/resources/templates/customer/reservationEdit.html
@@ -10,6 +10,34 @@
 
 <h1>고객</h1>
 <span th:text="${customerId}"></span>
-<h1>예약</h1>
+<h1>예약정보</h1>
 <span th:text="${reservationId}"></span>
+<span th:text="${reservation.orderList}"></span>
+
+<div class="NumberOfPeople">
+    <label>인원수</label>
+    <input class="" placeholder="인원수을 입력하세요"
+           th:field="${reservation.members}"
+           type="number">
+</div>
+
+<div class="Date">
+    <label>날짜</label>
+    <input class="" id="Date" placeholder="날짜를 입력하세요"
+           th:field="${reservation.dateSlot}" type="date">
+</div>
+
+<div class="Time">
+    <label>시간</label>
+    <select th:field="${reservation.timeSlot}">
+        <option value="">예약시간</option>
+        <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
+                th:text="${timeSlot.detail}" th:value="${timeSlot.detail}"></option>
+    </select>
+</div>
+<!--<form method="post" role="form" th:action="" th:object="${reservation}">-->
+
+
+<!--</form>-->
+
 </html>
