--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -30,7 +30,7 @@
                 <select th:field="*{time}">
                     <option value="">예약시간</option>
                     <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
-                            th:text="${timeSlot.detail}" th:value="${timeSlot}"></option>
+                            th:text="${timeSlot.detail}" th:value="${timeSlot.detail}"></option>
                 </select>
 
 
