--- a/src/main/resources/static/bootstrap/css/styles.css
+++ b/src/main/resources/static/bootstrap/css/styles.css
@@ -310,7 +310,10 @@ svg {
 
 table {
   caption-side: bottom;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
+  border-spacing: 30px;
+  border-collapse: separate;
+
 }
 
 caption {
@@ -334,6 +337,7 @@ th {
   border-color: inherit;
   border-style: solid;
   border-width: 0;
+  text-align: center;
 }
 
 label {
@@ -10892,6 +10896,21 @@ body {
   flex-grow: 1;
   min-height: calc(100vh - 56px);
   margin-left: -225px;
+}
+
+#maintext {
+  color: gray;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-0%, -50%);
+}
+
+#display_flex_center {
+  display: flex;
+  justify-content: center;
+
+  padding-top: 20px;
 }
 
 .sb-sidenav-toggled #layoutSidenav #layoutSidenav_nav {
