--- a/src/main/resources/templates/admin/adminMainPage.html
+++ b/src/main/resources/templates/admin/adminMainPage.html
@@ -72,7 +72,7 @@
 
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
 
-        <a class="navbar-brand ps-3" href="index.html">SWEB ADMIN</a>
+        <a class="navbar-brand ps-3" th:href="@{/admin/main}">SWEB ADMIN</a>
 
         <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4 nav-end">
             <li><a>안녕하세요! 관리자님 &emsp; </a></li>
@@ -85,15 +85,15 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <a class="nav-link" href="index.html">
+                        <a class="nav-link" th:href="@{/admin/menu}">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             메뉴 관리
                         </a>
-                        <a class="nav-link" href="charts.html">
+                        <a class="nav-link" th:href="@{/admin/reservationList}">
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             예약 관리
                         </a>
-                        <a class="nav-link" href="tables.html">
+                        <a class="nav-link" th:href="@{/admin/customer}">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             고객 관리
                         </a>
@@ -105,7 +105,11 @@
 
             <main>
 
-                <div class="container-fluid px-4">
+                <div id="maintext">
+                    좌측 메뉴를 선택해주세요.
+                </div>
+
+                <!-- <div class="container-fluid px-4">
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-table me-1"></i>
@@ -139,7 +143,7 @@
                             </table>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="container-fluid px-4">
                     
@@ -216,7 +220,7 @@
                     </div>
                 </div> -->
 
-                <div class="container-fluid px-4">
+                <!-- <div class="container-fluid px-4">
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-table me-1"></i>
@@ -250,7 +254,7 @@
                             </table>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </main>
             <footer class="py-4 bg-light mt-auto">
