--- a/src/main/resources/templates/admin/addMenuPage.html
+++ b/src/main/resources/templates/admin/addMenuPage.html
@@ -150,7 +150,7 @@
 
                 
 
-                <div class="container-fluid px-4">
+                <div class="container-fluid px-4 mt-3">
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fas fa-table me-1"></i>
