--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -11,6 +11,9 @@
     <div class="wrap">
         <div class="Select">
             <h3>예약 페이지 2. 테이블 선택 </h3>
+            <div class="img">
+                <img src="/img/table.jpg" width="250px">
+            </div>
             <form method="post" role="form" th:action="@{/customer/{id}/table(id=${id})}"
                 th:object="${reservation}">
                 <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
