--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Reservation</title>
-    <link rel="stylesheet" type="text/css" href="/css/reservationDate.css">
+    <link href="/css/reservationDate.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 </head>
 
@@ -31,7 +31,7 @@
                 <select th:field="*{time}">
                     <option value="">예약시간</option>
                     <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
-                            th:text="${timeSlot.detail}" th:value="${timeSlot.detail}"></option>
+                            th:text="${timeSlot.detail}" th:value="${timeSlot}"></option>
                 </select>
 
 
