23-05-29 주문 리스트 modal 완성

--- a/src/main/resources/templates/admin/addMenuPage.html
+++ b/src/main/resources/templates/admin/addMenuPage.html
@@ -146,7 +146,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
                             예약 관리
                         </a>
-                        <a class="nav-link" th:href="@{/admin/customer}">
+                        <a class="nav-link" th:href="@{/admin/customerList}">
                             <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                             고객 관리
                         </a>
