--- a/src/main/resources/templates/admin/reservationList.html
+++ b/src/main/resources/templates/admin/reservationList.html
@@ -1,141 +1,195 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="utf-8" th="http://www.thymeleaf.org" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+
+    <!--    <meta charset="utf-8" th="http://www.thymeleaf.org"/>-->
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+    <meta content="" name="description"/>
+    <meta content="" name="author"/>
     <title>Dashboard - SB Admin</title>
-    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
-    <link href="/bootstrap/css/styles.css" rel="stylesheet" />
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet"/>
+    <link href="/bootstrap/css/styles.css" rel="stylesheet"/>
+    <script crossorigin="anonymous" src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"></script>
+
+    <!--    modal 띄우기위해서 추가한 것입니다 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!--    modal 띄우기위해서 추가한 것입니다 -->
+
 </head>
+
+<style>
+    .orderUl {
+        list-style-type: none; /* 동그라미 요소 제거 */
+        padding: 0; /* 왼쪽 패딩 제거 */
+    }
+
+    .orderLi {
+        margin-bottom: 10px; /* 아래쪽 간격 추가 */
+    }
+</style>
+
 
 <body class="sb-nav-fixed">
 
-    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+<nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
 
-        <a class="navbar-brand ps-3" th:href="@{/admin}">SWEB ADMIN</a>
+    <a class="navbar-brand ps-3" th:href="@{/admin}">SWEB ADMIN</a>
 
-        <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4 nav-end">
-            <li><a>안녕하세요! 관리자님 &emsp; </a></li>
-            <li><a th:href="@{/login/logout}">LOG-OUT</a></li>
-        </ul>
-    </nav>
+    <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4 nav-end">
+        <li><a>안녕하세요! 관리자님 &emsp; </a></li>
+        <li><a th:href="@{/login/logout}">LOG-OUT</a></li>
+    </ul>
+</nav>
 
-    <div id="layoutSidenav">
-        <div id="layoutSidenav_nav">
-            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-                <div class="sb-sidenav-menu">
-                    <div class="nav">
-                        <a class="nav-link" th:href="@{/admin/menu}">
-                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            메뉴 관리
-                        </a>
-                        <a class="nav-link" th:href="@{/admin/reservationList}">
-                            <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                            예약 관리
-                        </a>
-                        <a class="nav-link" th:href="@{/admin/customer}">
-                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                            고객 관리
-                        </a>
+
+<div id="layoutSidenav">
+    <div id="layoutSidenav_nav">
+        <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+            <div class="sb-sidenav-menu">
+                <div class="nav">
+                    <a class="nav-link" th:href="@{/admin/menu}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                        메뉴 관리
+                    </a>
+                    <a class="nav-link" th:href="@{/admin/reservationList}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                        예약 관리
+                    </a>
+                    <a class="nav-link" th:href="@{/admin/customerList}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        고객 관리
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div id="layoutSidenav_content">
+        <main>
+            <div class="container-fluid px-4 mt-3">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-table me-1"></i>
+                        예약 관리
+                    </div>
+
+                    <form class="" th:object="${researvationSearch}">
+                        <div id="display_flex_center">
+                            <input class="mx-5" placeholder="회원명" th:field="*{name}" type="text"/>
+                            <input class="mx-5" id="currentDate" placeholder="날짜" th:field="${researvationSearch.date}"
+                                   type="date">
+                            <select class="mx-5" th:field="*{time}">
+                                <option value="">예약 시간</option>
+                                <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
+                                        th:text="${timeSlot.detail}" th:value="${timeSlot}"></option>
+                            </select>
+                            <button class="mx-5" type="submit">검색</button>
+                        </div>
+                    </form>
+
+                    <!--modal 확인용-->
+                    <!--                    <div>-->
+                    <!--                        <button class="btn btn-primary"-->
+                    <!--                                data-target="#orderModal"-->
+                    <!--                                data-toggle="modal"-->
+                    <!--                                type="button">-->
+                    <!--                            모달 확인용-->
+                    <!--                        </button>-->
+                    <!--                    </div>-->
+                    <!--modal 확인용-->
+
+                    <div class="card-body" id="display_flex_center">
+                        <table id="datatablesSimple">
+                            <thead>
+                            <tr>
+                                <th>취소</th>
+                                <th>번호</th>
+                                <th>회원명</th>
+                                <th>날짜</th>
+                                <th>시간</th>
+                                <th>예약 인원 수</th>
+                                <th>테이블 번호</th>
+                                <th>주문 메뉴</th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+
+                            <tr th:each="reservation : ${reservationList}">
+                                <td>
+                                    <button class="deleteBtn"
+                                            th:data-reservation-id="${reservation.reservationID}" type="button">
+                                        삭제
+                                    </button>
+                                </td>
+                                <td th:text="${reservation.reservationID}">번호</td>
+                                <td th:text="${reservation.user.name}">회원명</td>
+                                <td th:text="${reservation.dateSlot}">날짜</td>
+                                <td th:text="${reservation.timeSlot.getDetail()}">시간</td>
+                                <td th:text="${reservation.members}">예약 인원 수</td>
+                                <td th:text="${reservation.tables.number}">테이블 번호</td>
+                                <td>
+                                    <button class="btn btn-primary"
+                                            data-target="#orderListModal"
+                                            data-toggle="modal"
+                                            th:data-reservation-id="${reservation.reservationID}"
+                                            type="button">
+                                        주문 리스트
+                                    </button>
+                                </td>
+
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-            </nav>
-        </div>
-        <div id="layoutSidenav_content">
-            <main>
-                <div class="container-fluid px-4 mt-3">
-                    <div class="card mb-4">
-                        <div class="card-header">
-                            <i class="fas fa-table me-1"></i>
-                            예약 관리
-                        </div>
-
-                        <form class="" th:object="${researvationSearch}" >
-                            <div id="display_flex_center">
-                                    <input class="mx-5" placeholder="회원명" th:field="*{name}" type="text"/>
-                                    <input class="mx-5" id="currentDate" placeholder="날짜" th:field="${researvationSearch.date}"
-                                           type="date">
-                                    <select class="mx-5"th:field="*{time}">
-                                        <option value="">예약 시간</option>
-                                        <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
-                                                th:text="${timeSlot.detail}" th:value="${timeSlot}"></option>
-                                    </select>
-                                <button class="mx-5" type="submit">검색</button>
-                            </div>
-                        </form>
-
-
-                        <div class="card-body" id = "display_flex_center">
-                            <table id="datatablesSimple">
-                                <thead>
-                                    <tr>
-                                        <th>취소</th>
-                                        <th>번호</th>
-                                        <th>회원명</th>
-                                        <th>날짜</th>
-                                        <th>시간</th>
-                                        <th>예약 인원 수</th>
-                                        <th>테이블 번호</th>
-                                        <th>주문 메뉴</th>
-                                    </tr>
-                                </thead>
-                                
-                                <tbody>
-
-                                    <tr th:each="reservation : ${reservationList}">
-                                        <td>
-                                            <button class="deleteBtn"
-                                                th:data-reservation-id="${reservation.reservationID}" type="button">
-                                                삭제
-                                            </button>
-                                        </td>
-                                        <td th:text="${reservation.reservationID}">번호</td>
-                                        <td th:text="${reservation.user.name}">회원명</td>
-                                        <td th:text="${reservation.dateSlot}">날짜</td>
-                                        <td th:text="${reservation.timeSlot.getDetail()}">시간</td>
-                                        <td th:text="${reservation.members}">예약 인원 수</td>
-                                        <td th:text="${reservation.tables.number}">테이블 번호</td>
-                                        <td>
-                                            <button class="btn btn-primary" data-target="#orderListModal"
-                                                data-toggle="modal" type="button">
-                                                주문 리스트
-                                            </button>
-                                        </td>
-
-                                </tbody>
-                            </table>
-                        </div>
+            </div>
+        </main>
+        <footer class="py-4 bg-light mt-auto">
+            <div class="container-fluid px-4">
+                <div class="d-flex align-items-center justify-content-between small">
+                    <div class="text-muted">Copyright &copy; SWEB</div>
+                    <div>
+                        &middot;
                     </div>
                 </div>
-            </main>
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid px-4">
-                    <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">Copyright &copy; SWEB</div>
-                        <div>
-                            &middot;
-                        </div>
-                    </div>
-                </div>
-            </footer>
+            </div>
+        </footer>
+    </div>
+</div>
+
+<!-- Modal -->
+<div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="orderListModal" role="dialog"
+     tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">주문 리스트</h5>
+                <!--                <button aria-label="Close" class="close" data-dismiss="modal" type="button">-->
+                <!--                    <span aria-hidden="true">&times;</span>-->
+                <!--                </button>-->
+            </div>
+            <div class="modal-body">
+                modal 의 contents 가 들어가는 곳
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+            </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-    <script src="assets/demo/chart-area-demo.js"></script>
-    <script src="assets/demo/chart-bar-demo.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
-        crossorigin="anonymous"></script>
-    <script src="js/datatables-simple-demo.js"></script>
+</div>
+
+
+<script crossorigin="anonymous"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="js/scripts.js"></script>
+<script crossorigin="anonymous" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+<script src="assets/demo/chart-area-demo.js"></script>
+<script src="assets/demo/chart-bar-demo.js"></script>
+<script crossorigin="anonymous"
+        src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"></script>
+<script src="js/datatables-simple-demo.js"></script>
 </body>
 
 </html>
@@ -157,6 +211,29 @@
             }
         });
     });
+
+    $(document).on('click', '.btn-primary', function () {
+        var reservationId = $(this).data('reservation-id');
+        $.ajax({
+            url: '/reservation/' + reservationId + '/orderList',
+            type: 'GET',
+            data: {'reservationId': reservationId},
+            success: function (data) {
+                $('.modal-body').empty();
+                var ul = $('<ul/>').addClass('orderUl');
+                data.forEach(function (item) {
+                    var li = $('<li/>').addClass('orderLi');
+                    li.text(item.menu.name + ' : ' + item.count + ' 개');
+                    ul.append(li);
+                });
+                $('.modal-body').append(ul);
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                console.log(textStatus, errorThrown);
+            }
+        })
+    });
+
 </script>
 
 <script>
